# Monte-Carlo-Path-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.cpp  Engine.h  Object.cpp  Object.h  README.md  Ray.h  Scene.cpp  Scene.h  Vector.h  common.h  constants.h  main.cpp
results/: render_image_MCPT_highres.ppm  render_image_with_obj_2.pbm  teapot_mesh.ppm  twist_mesh.ppm
src/: Engine.cpp  Engine.h  Light.cpp  Light.h  ObjReader.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Vector.h  common.h  main.cpp
src/object/: Material.h  Object.cpp  Object.h  Texture.h
src/utility/: ObjLoader.h  Vector.h  common.h
